Update Model database

--- a/QuyetTienManage/QuyetTienManage/Views/Home/Index.cshtml
+++ b/QuyetTienManage/QuyetTienManage/Views/Home/Index.cshtml
@@ -4,6 +4,7 @@
 
 <div class="jumbotron">
     <img class="img-thumbnail img-responsive" src="@Url.Content("~/img/banner.jpg")" />
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/pRqrieW9vbc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
 </div>
 
 <div class="row">
