Hôm nay làm nhiều lắm, edit nè, up ảnh nè, load ảnh nè, pro nè

--- a/QuyetTienManage/QuyetTienManage/Views/BangSanPham/Create.cshtml
+++ b/QuyetTienManage/QuyetTienManage/Views/BangSanPham/Create.cshtml
@@ -75,7 +75,7 @@
             <div class="col-md-10">
                 @Html.TextBox("HinhAnh", null, new { @type = "file", onchange = "readURL(this)", @class = "form-control" })
                 @Html.ValidationMessage("HinhAnh")
-                <img class="img-thumbnail img-fluid rounded mx-auto d-block" id="HinhDAIDIEN" src="" />
+                <img id="HinhDAIDIEN" src="" />
             </div>
         </div>
 
