--- a/QuyetTienManage/QuyetTienManage/Views/BangSanPham/Index.cshtml
+++ b/QuyetTienManage/QuyetTienManage/Views/BangSanPham/Index.cshtml
@@ -35,6 +35,7 @@
             <th>
                 Loại Sản Phẩm
             </th>
+            <th>Hình Sản Phẩm</th>
             <th></th>
         </tr>
     </thead>
@@ -48,14 +49,14 @@
                     @Html.DisplayFor(modelItem => item.TenSP)
                 </td>
                 <td>
-                    @String.Format("{0:c0}", item.GiaBan).Remove(0,1) VNĐ
+                    @String.Format("{0:0,0}", item.GiaBan) VNĐ
                 </td>
                 <td>
-                    @String.Format("{0:c0}", item.GiaGoc).Remove(0, 1) VNĐ
+                    @String.Format("{0:0,0}", item.GiaGoc) VNĐ
                 </td>
                 <td>
 
-                    @String.Format("{0:c0}", item.GiaGop).Remove(0, 1) VNĐ
+                    @String.Format("{0:0,0}", item.GiaGop) VNĐ
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.SoLuongTon)
@@ -64,8 +65,10 @@
                     @Html.DisplayFor(modelItem => item.LoaiSanPham.TenLoai)
                 </td>
                 <td>
+                    <img src="@Url.Action("Details", new { id = item.id })" width="150" height="100" />
+                </td>
+                <td>
                     @Html.ActionLink(" ", "Edit", new { id = item.id }, new { @class = "glyphicon glyphicon-pencil " }) |
-                    @Html.ActionLink(" ", "Details", new { id = item.id }, new { @class = "glyphicon glyphicon-list-alt " }) |
                     @Html.ActionLink(" ", "Delete", new { id = item.id }, new { @class = "glyphicon glyphicon-trash " })
                 </td>
             </tr>
